# python-typewriter

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Pipfile  README.md  coverage.xml  junit.xml  mkdocs.yml  pyproject.toml  tutorial.txt
.github/ISSUE_TEMPLATE/: Bug_report.md
.github/workflows/: CI.yml  pypi_upload.yml
docs/: .buildinfo  api.md  behavior.md  genindex.html  getting-started.md  index.html  index.md  motivation.md  objects.inv  py-modindex.html  search.html  searchindex.js  usage.md
docs/.doctrees/: environment.pickle  index.doctree
docs/_modules/: index.html
docs/_modules/typewriter/: codemod.html
docs/_sources/: index.rst.txt
docs/_static/: classic.css  pydoctheme.css
docs/source/: conf.py  embedding.rst  index.rst  output_formats.rst  workflows.rst
tests/: test_cli.py  test_codegen.py  test_runner.py  test_transformer.py
typewriter/: __init__.py  cli.py  codemod.py  runner.py  utils.py
