[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["typewriter*"]

[project]
name = "py-typewriter-cli"
version = "1.1.0"
requires-python = ">=3.10,<3.15"
description = "A CLI tool for generating type annotations."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["typing", "codemod", "libcst", "optional", "union", "typer", "cli"]
authors = [
    {name = "Daniel Henderson", email = "me@danhenderson.dev"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
dependencies = [
    "libcst==1.8.5",
    "pathspec==1.0.4",
    "typer==0.24.1"
]

[project.scripts]
typewriter = "typewriter.cli:app"

[project.urls]
Homepage = "https://github.com/danphenderson/python-typewriter"
Repository = "https://github.com/danphenderson/python-typewriter"
Issues = "https://github.com/danphenderson/python-typewriter/issues"

[project.optional-dependencies]
tests = [
    "coverage[toml]",
    "exceptiongroup; python_version < '3.11'",
    "pytest",
    "pytest-cov",
    "tomli; python_version < '3.11'",
]

docs = [
    "sphinx",
    "sphinx-py3doc-enhanced-theme",
    "sphinx-autodoc-typehints",
    "sphinx-autodoc-annotation",
    "sphinxcontrib-asyncio",
    "sphinxcontrib-napoleon",
    "sphinxcontrib-trio",
]
dev = [
    "pre-commit",
    "black==23.10.0",
    "flake8==6.1.0",
    "isort==5.13.2",
    "autoflake==v1.4",
    "mypy==v1.8.0",
]

[tool.coverage.paths]
source = ["typewriter"]


[tool.coverage.run]
branch = true
source =[
    "typewriter"
]
parallel = false


[tool.coverage.report]
show_missing = true
precision = 2


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --strict-markers --ignore=.eggs --doctest-modules --tb=long"
norecursedirs = [
    ".git",
    "dist",
    "build",
]
testpaths = [
    "tests"
]

[tool.black]
line-length = 140
target-version = ['py310']
skip-string-normalization = true

[tool.isort]
profile = "black"
